--- a/index.html
+++ b/index.html
@@ -249,6 +249,22 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+          <div class="icon-box">
+            <div class="icon"><i class="fas fa-cube"></i></div>
+            <h4><a href="">Medelado en tercera dimensión</a></h4>
+            <p>Creación de proyectos en 3D.</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bx-arch"></i></div>
+            <h4><a href="">Renderizados Arquitectónicos</a></h4>
+            <p>Imagénes fotorrealistas de tu proyecto.</p>
+          </div>
+        </div>
+
 
 
       </div>
@@ -271,6 +287,8 @@
             <li data-filter="*" class="filter-active">Todo</li>
             <li data-filter=".filter-twitch">Twitch</li>
             <li data-filter=".filter-personal">Trabajos personales</li>
+            <li data-filter=".filter-render">Renders</li>
+            <li data-filter=".filter-modelados">Modelados 3D</li>
           </ul>
         </div>
       </div>
@@ -281,10 +299,10 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Sin_titulo-1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 4</h4>
-              <p>App</p>
+              <h4>Stream Pack</h4>
+              <p></p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Sin_titulo-1.png" data-gall="portfolioGallery" class="venobox" title="App 4"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/Sin_titulo-1.png" data-gall="portfolioGallery" class="venobox" title="Render Pack"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -296,7 +314,7 @@
               <h4>Suranga de pollo</h4>
               <p>Ya comenzamos</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/overlaytw21.png" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/overlaytw21.png" data-gall="portfolioGallery" class="venobox" title="Ya comenzamos"><i class="bx bx-plus"></i></a>
                 
               </div>
             </div>
@@ -307,10 +325,10 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/overlaytw3.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 2</h4>
-              <p>App</p>
+              <h4>Escena</h4>
+              <p>Off stream</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/overlaytw3.png" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/overlaytw3.png" data-gall="portfolioGallery" class="venobox" title="Off stream"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -320,10 +338,10 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/overlaytw22.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Panel</h4>
-              <p>App</p>
+              <h4>Overlay</h4>
+              <p>Principal</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/overlaytw22.png" data-gall="portfolioGallery" class="venobox" title="App 6"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/overlaytw22.png" data-gall="portfolioGallery" class="venobox" title="Ovelay"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -333,10 +351,10 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Sobre_mi.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 3</h4>
-              <p>App</p>
+              <h4>Sobre mi</h4>
+              <p>Panel</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Sobre_mi.png" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/Sobre_mi.png" data-gall="portfolioGallery" class="venobox" title="Sobre mi"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -346,10 +364,10 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/twitter.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 3</h4>
-              <p>App</p>
+              <h4>Twitter</h4>
+              <p>Panel</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/twitter.png" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/twitter.png" data-gall="portfolioGallery" class="venobox" title="Twitter"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -359,10 +377,10 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/OnateTW.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Panel</h4>
-              <p>App</p>
+              <h4>Discord</h4>
+              <p>Panel</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/OnateTW.jpg" data-gall="portfolioGallery" class="venobox" title="App 5"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/OnateTW.jpg" data-gall="portfolioGallery" class="venobox" title="Discord"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -373,10 +391,10 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/OnateTW3.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Panel</h4>
-              <p>App</p>
+              <h4>Youtube</h4>
+              <p>Panel</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/OnateTW3.jpg" data-gall="portfolioGallery" class="venobox" title="App 6"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/OnateTW3.jpg" data-gall="portfolioGallery" class="venobox" title="Youtube"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -388,10 +406,10 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/NETMBanner.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Panel</h4>
-              <p>App</p>
+              <h4>NoEstamosTanMal</h4>
+              <p>Banner</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/NETMBanner.png" data-gall="portfolioGallery" class="venobox" title="App 7"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/NETMBanner.png" data-gall="portfolioGallery" class="venobox" title="NoEstamosTanMal"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -401,10 +419,10 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/PanelDonate.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Panel</h4>
-              <p>App</p>
+              <h4>Donaciones</h4>
+              <p>Panel</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/PanelDonate.png" data-gall="portfolioGallery" class="venobox" title="App 8"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/PanelDonate.png" data-gall="portfolioGallery" class="venobox" title="Donaciones"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -419,10 +437,10 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/WhatsApp Image 2020-12-19 at 1.01.52 PM.jpeg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 2</h4>
-              <p>Web</p>
+              <h4>Carta de presentación</h4>
+              <p></p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/WhatsApp Image 2020-12-19 at 1.01.52 PM.jpeg" data-gall="portfolioGallery" class="venobox" title="personal 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/WhatsApp Image 2020-12-19 at 1.01.52 PM.jpeg" data-gall="portfolioGallery" class="venobox" title="Carta de presentacion"><i class="bx bx-plus"></i></a>
 
               </div>
             </div>
@@ -433,17 +451,84 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Fondo.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 2</h4>
-              <p>Web</p>
+              <h4>Logo</h4>
+              <p></p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Fondo.png" data-gall="portfolioGallery" class="venobox" title="personal 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/Fondo.png" data-gall="portfolioGallery" class="venobox" title="Logo"><i class="bx bx-plus"></i></a>
 
               </div>
             </div>
           </div>
         </div>
 
+                              <!-- ======= Render Filter ========== -->
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-render">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Render.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Render</h4>
+              <p>1</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Render.jpg" data-gall="portfolioGallery" class="venobox" title="Render 1"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-render">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/render2.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Render</h4>
+              <p>2</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/render2.jpg" data-gall="portfolioGallery" class="venobox" title="Render 2"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-render">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Render3.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Render</h4>
+              <p>3</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Render3.jpg" data-gall="portfolioGallery" class="venobox" title="Render 3"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+                            <!-- ======= Modelados Filter ========== -->
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-modelados">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Modelado3d.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Model 3D</h4>
+              <p>1</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Modelado3d.jpg" data-gall="portfolioGallery" class="venobox" title="Model 1"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-modelados">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Modelado3d1.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Model 3D</h4>
+              <p>2</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Modelado3d1.jpg" data-gall="portfolioGallery" class="venobox" title="Model 2"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
 
       </div>
 
