--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
         </ul>
       </nav><!-- .nav-menu -->
 
+    
+
       <div class="social-links">
         <a href="https://twitter.com/TiKeyDesign" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="https://www.instagram.com/tikeydesign/" class="instagram"><i class="icofont-instagram"></i></a>
@@ -81,7 +83,7 @@
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Diseñador gráfico</h3>
-          <p class="font-italic">
+          <p class="font-italic about-mee">
             Mi nombres es Angel pero me dicen Tk o Tikey, soy de Argentina, específicamente de Santiago del estero. Actualmente soy estudiante de diseño gráfico en el colegio universitario IES.
           </p>
           <div class="row">
@@ -215,7 +217,7 @@
   
   <!-- ======= Services Section ======= -->
   <section id="services" class="services">
-    <div class="container">
+    <div class="container serviciess">
 
 
 
@@ -449,7 +451,7 @@
 
   <!-- ======= Contact Section ======= -->
   <section id="contact" class="contact">
-    <div class="container">
+    <div class="container contacto">
 
       <div class="section-title">
         <h2>Contacto</h2>
