--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/logo-tikey.png" rel="icon">
+  <link href="assets/img/Logopag_Mesa de trabajo 1.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Google Fonts -->
@@ -81,7 +81,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/pp.jpg" class="img-fluid" alt="">
+          <img src="assets/img/FotoCV2.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Diseñador gráfico</h3>
@@ -353,12 +353,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Pagina/Logos/Logo con interior blanco.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Pagina/Logos/VerticalReducido.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Logo</h4>
               <p></p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Pagina/Logos/Logo con interior blanco.png" data-gall="portfolioGallery"
+                <a href="assets/img/portfolio/Pagina/Logos/VerticalReducido.jpg" data-gall="portfolioGallery"
                   class="venobox" title="Sobre mi"><i class="bx bx-plus"></i></a>
               </div>
             </div>
@@ -387,6 +387,54 @@
               <p>Panel</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/Pagina/Logos/Logodelospibes.png" data-gall="portfolioGallery"
+                  class="venobox" title="Discord"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Pagina/Logos/CJ ARMY LOGO.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Logo</h4>
+              <p>Panel</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Pagina/Logos/CJ ARMY LOGO.png" data-gall="portfolioGallery"
+                  class="venobox" title="Discord"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Pagina/Logos/DestinyLogo-01.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Logo</h4>
+              <p>Panel</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Pagina/Logos/DestinyLogo-01.png" data-gall="portfolioGallery"
+                  class="venobox" title="Discord"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Pagina/Logos/Logo1_Mesa de trabajo 1.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Logo</h4>
+              <p>Panel</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Pagina/Logos/Logo1_Mesa de trabajo 1.png" data-gall="portfolioGallery"
                   class="venobox" title="Discord"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                   class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -602,6 +650,36 @@
             </div>
           </div>
         </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-trabajos-varios">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Pagina/Trabajos Varios/HAF.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Fondo</h4>
+              <p></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Pagina/Trabajos Varios/HAF.png" data-gall="portfolioGallery" class="venobox"
+                  title="Off stream"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-trabajos-varios">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Pagina/Trabajos Varios/NADOTTI.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Fondo</h4>
+              <p></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Pagina/Trabajos Varios/NADOTTI.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="Off stream"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      
   
         <div class="col-lg-4 col-md-6 portfolio-item filter-twitch">
           <div class="portfolio-wrap">
