--- a/index.html
+++ b/index.html
@@ -86,14 +86,16 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Diseñador gráfico</h3>
           <p class="font-italic about-mee">
-            Mi nombres es Angel pero me dicen Tk o Tikey, soy de Argentina, específicamente de Santiago del estero.
-            Actualmente soy estudiante de diseño gráfico en el colegio universitario IES.
+           Mi nombre es Angel Acuña,
+          Soy un estudiante avanzado en la carrera de Diseño grafico en el Colegio Universitario IES de la ciudad de Cordoba, 
+            apasionado por transformar ideas en creatividad visual. Con un año de experiencia como freelancer me he dedicado
+            a crear logortipos y diversos trabajos para clientes en toda Argentina.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Ciudad: </strong>Santiago del estero, Argentina </li>
-                <li><i class="icofont-rounded-right"></i> <strong>Edad:</strong> 20</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Ciudad: </strong>Frias - Santiago del estero, Argentina </li>
+                <li><i class="icofont-rounded-right"></i> <strong>Edad:</strong> 22</li>
               </ul>
             </div>
             <div class="col-lg-6">
@@ -105,14 +107,9 @@
           </div>
 
           <p>
-            Mi especialidad es la creación de una identidad visual para la plataforma de Twitch creando paneles,
-            banners, escenas y logos.
-
-            Además de crear imágenes para Twitch también me especializo en fotomontajes, edición fotográfica,
-            transformar imágenes en ilustraciones vectorizadas, logos, tarjetas de presentación, tarjetas de invitación,
-            imágenes publicitarias.
-
-            Cada oportunidad que se me otorgue será aprovechada al 100% para brindar el mejor servicio a mis clientes.
+            Mi enfoque principal se centra en el diseño de logotipos y fotomontajes, areas donde busco destacar y superar las expectativas de mis clientes.
+            Cuento con habilidades avanzadas en Adobe Photoshop e Illustrator, utilizando estas poderosas herramientas para dar vida a los conceptos visuales.
+            Ademas poseo habilidades intermedias en Figma, Adobe XD y After Effects, lo que me permite abordar proyector de manera inegral. 
           </p>
 
         </div>
@@ -121,45 +118,7 @@
     </div><!-- End About Me -->
 
     <!-- ======= Counts ======= -->
-    <div class="counts container">
-
-      <div class="row">
-
-        <div class="col-lg-3 col-md-6">
-          <div class="count-box">
-            <i class="fas fa-users"></i>
-            <span data-toggle="counter-up">8</span>
-            <p>Clientes</p>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
-          <div class="count-box">
-            <i class="icofont-document-folder"></i>
-            <span data-toggle="counter-up">20</span>
-            <p>Proyectos</p>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-          <div class="count-box">
-            <i class="far fa-clock"></i>
-            <span data-toggle="counter-up">500</span>
-            <p>Horas trabajadas</p>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-          <div class="count-box">
-            <i class="far fa-laugh-beam"></i>
-            <span data-toggle="counter-up">8</span>
-            <p>Clientes satisfechos</p>
-          </div>
-        </div>
-
-      </div>
-
-    </div><!-- End Counts -->
+   
 
     <!-- ======= Skills  ======= -->
 
