--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <p>
             Mi enfoque principal se centra en el diseño de logotipos y fotomontajes, areas donde busco destacar y superar las expectativas de mis clientes.
             Cuento con habilidades avanzadas en Adobe Photoshop e Illustrator, utilizando estas poderosas herramientas para dar vida a los conceptos visuales.
-            Ademas poseo habilidades intermedias en Figma, Adobe XD y After Effects, lo que me permite abordar proyector de manera inegral. 
+            Ademas poseo habilidades intermedias en Figma, Adobe XD y After Effects, lo que me permite abordar proyector de manera integral. 
           </p>
 
         </div>
