--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
           <h3>Diseñador gráfico</h3>
           <p class="font-italic about-mee">
            Mi nombre es Angel Acuña,
-          Soy un estudiante avanzado en la carrera de Diseño grafico en el Colegio Universitario IES de la ciudad de Cordoba, 
+          Soy un estudiante avanzado en la carrera de Diseño gráfico en el Colegio Universitario IES de la ciudad de Cordoba, 
             apasionado por transformar ideas en creatividad visual. Con un año de experiencia como freelancer me he dedicado
             a crear logortipos y diversos trabajos para clientes en toda Argentina.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Ciudad: </strong>Frias - Santiago del estero, Argentina </li>
+                <li><i class="icofont-rounded-right"></i> <strong>Ciudad: </strong>Frias, Santiago del estero, Argentina </li>
                 <li><i class="icofont-rounded-right"></i> <strong>Edad:</strong> 22</li>
               </ul>
             </div>
@@ -107,9 +107,11 @@
           </div>
 
           <p>
-            Mi enfoque principal se centra en el diseño de logotipos y fotomontajes, areas donde busco destacar y superar las expectativas de mis clientes.
+            Mi enfoque principal se centra en el diseño de logotipos y fotomontajes, áreas donde busco destacar y superar las expectativas de mis clientes.
             Cuento con habilidades avanzadas en Adobe Photoshop e Illustrator, utilizando estas poderosas herramientas para dar vida a los conceptos visuales.
-            Ademas poseo habilidades intermedias en Figma, Adobe XD y After Effects, lo que me permite abordar proyector de manera integral. 
+            Además poseo habilidades intermedias en Figma, Adobe XD y After Effects, lo que me permite abordar proyector de manera integral. 
+            Me caracterizo por trabajar con un cronograma organizado, lo que me permite realizar tareas de forma eficiente y cumplir con las fechas establecidas.
+            Creo en la importacia de la planificación para garantizar resultados de alta calidad.
           </p>
 
         </div>
