--- a/index.html
+++ b/index.html
@@ -200,16 +200,25 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
-            <div class="icon"><i class="fab fa-twitch"></i></div>
-            <h4><a href="">Paneles de Twitch</a></h4>
-            <p>Creación de portadas para tu canal de Twitch.</p>
+            <div class="icon"><i class="fa-solid fa-ruler"></i></div>
+            <h4><a href="">Diseños de Impresión</a></h4>
+            <p>Gráficas destinadas a ser impresas en distintos medios.</p>
+          </div>
+        </div>
+
+         <div class="row">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="icon-box">
+            <div class="icon"><i class="fa-brands fa-instagram"></i></div>
+            <h4><a href="">Diseño de publicaciones en redes sociales</a></h4>
+            <p>Creación de diseños digitales para las distintas plataformas.</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <div class="icon"><i class="fas fa-pen-fancy"></i></div>
-            <h4><a href="">Logos</a></h4>
+            <h4><a href="">Logotipos</a></h4>
             <p>Creación de una identidad gráfica para tu proyecto.</p>
           </div>
         </div>
@@ -219,6 +228,14 @@
             <div class="icon"><i class="fas fa-crop"></i></div>
             <h4><a href="">Ilustraciones</a></h4>
             <p>Ilustración de una imagen mediante vectores.</p>
+          </div>
+        </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+          <div class="icon-box">
+            <div class="icon"><i class="fa-solid fa-helmet-safety"></i></div>
+            <h4><a href="">Proyectos personalizados</a></h4>
+            <p>Planificacion adecuada a tus necesidades y problemáticas gráficas.</p>
           </div>
         </div>
 
