--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
           </div>
         </div>
 
-         <div class="row">
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+         
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <div class="icon"><i class="fa-brands fa-instagram"></i></div>
             <h4><a href="">Diseño de publicaciones en redes sociales</a></h4>
