--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
             <li data-filter=".filter-logos">Logos</li>
             <li data-filter=".filter-practicas-personales">Practicas Profesionalizantes</li>
             <li data-filter=".filter-panaderia">Panaderia San Carlos</li>
+            <li data-filter=".filter-lacreme">La Creme</li>
             <li data-filter=".filter-trabajos-varios">Trabajos Varios</li>
             <li data-filter=".filter-twitch">Twitch</li>
           </ul>
@@ -709,6 +710,66 @@
           </div>
         </div>
       </div>   
+
+          <!-- LA CREME SECTION-->
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-lacreme">
+        <div class="portfolio-wrap">
+          <img src="assets/img/portfolio/Pagina/Trabajo- LaCreme/LaCreme LOGO SIN FONDO.png" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <h4>La Creme</h4>
+            <p></p>
+            <div class="portfolio-links">
+              <a href="assets/img/portfolio/Pagina/Trabajo- LaCreme/LaCreme LOGO SIN FONDO.png"
+                data-gall="portfolioGallery" class="venobox" title="Off stream"><i class="bx bx-plus"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    
+
+    <div class="col-lg-4 col-md-6 portfolio-item filter-lacreme">
+      <div class="portfolio-wrap">
+        <img src="assets/img/portfolio/Pagina/Trabajo- LaCreme/LaCreme LOGO.jpg"
+          class="img-fluid" alt="">
+        <div class="portfolio-info">
+          <h4>La Creme</h4>
+          <p></p>
+          <div class="portfolio-links">
+            <a href="assets/img/portfolio/Pagina/Trabajo- LaCreme/LaCreme LOGO.jpg"
+              data-gall="portfolioGallery" class="venobox" title="Off stream"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-4 col-md-6 portfolio-item filter-lacreme">
+      <div class=" portfolio-wrap">
+      <img src="assets/img/portfolio/Pagina/Trabajo- LaCreme/STORY 1.jpg" class="img-fluid" alt="">
+      <div class="portfolio-info">
+        <h4>La Creme</h4>
+        <p></p>
+        <div class="portfolio-links">
+          <a href="assets/img/portfolio/Pagina/Trabajo- LaCreme/STORY 1.jpg" data-gall="portfolioGallery"
+            class="venobox" title="Off stream"><i class="bx bx-plus"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>   
+
+    <div class="col-lg-4 col-md-6 portfolio-item filter-lacreme">
+      <div class=" portfolio-wrap">
+      <img src="assets/img/portfolio/Pagina/Trabajo- LaCreme/STORY 2.jpg" class="img-fluid" alt="">
+      <div class="portfolio-info">
+        <h4>La Creme</h4>
+        <p></p>
+        <div class="portfolio-links">
+          <a href="assets/img/portfolio/Pagina/Trabajo- LaCreme/STORY 2.jpg" data-gall="portfolioGallery"
+            class="venobox" title="Off stream"><i class="bx bx-plus"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>   
 
     </div>
   </section><!-- End Portfolio Section -->
