--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>TikeyDesign</title>
+  <title>Heiron</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,7 +46,7 @@
       <h1><a href="index.html">TikeyDesign</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>Bienvenido a mi portafolio de <span>Diseño gráfico</span></h2>
+      <h2>Bienvenido a mi portafolio de <span>Diseño</span></h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -61,8 +61,8 @@
 
 
       <div class="social-links">
-        <a href="https://twitter.com/TiKeyDesign" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="https://www.instagram.com/tikeydesign/" class="instagram"><i class="icofont-instagram"></i></a>
+        <a href="https://twitter.com/aaroonmk" class="twitter"><i class="icofont-twitter"></i></a>
+        <a href="https://www.instagram.com/aaroonmk/" class="instagram"><i class="icofont-instagram"></i></a>
       </div>
 
     </div>
