--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <header id="header" class="header-tops">
     <div class="container">
 
-      <h1><a href="index.html">TikeyDesign</a></h1>
+      <h1><a href="index.html">Heiron</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>Bienvenido a mi portafolio de <span>Diseño</span></h2>
@@ -76,7 +76,7 @@
 
       <div class="section-title">
         <h2>Sobre Mi</h2>
-        <p>Aprende más sobre mi</p>
+        <p>Más obre mi</p>
       </div>
 
       <div class="row">
@@ -84,12 +84,12 @@
           <img src="assets/img/FotoCV2.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Diseñador gráfico</h3>
+          <h3>Diseñador</h3>
           <p class="font-italic about-mee">
-           Mi nombre es Angel Acuña,
-          Soy un estudiante avanzado en la carrera de Diseño gráfico en el Colegio Universitario IES de la ciudad de Cordoba, 
-            apasionado por transformar ideas en creatividad visual. Con un año de experiencia como freelancer me he dedicado
-            a crear logortipos y diversos trabajos para clientes en toda Argentina.
+           Soy un estudiante avanzado en Diseño y Sistemas Microinformaticos y Redes 
+          Apasionado de la ciberseguridad y por transformar ideas en creatividad visual. 
+          Con un 4 años de experiencia como freelancer me he dedicado
+          a crear logotipos y banners entre otras muchos diseños.
           </p>
           <div class="row">
             <div class="col-lg-6">
