--- a/index.html
+++ b/index.html
@@ -94,22 +94,20 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Ciudad: </strong>Frias, Santiago del estero, Argentina </li>
-                <li><i class="icofont-rounded-right"></i> <strong>Edad:</strong> 22</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Ciudad: </strong>Madrid </li>
+                <li><i class="icofont-rounded-right"></i> <strong>Edad:</strong> 19</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> tikeydesign21@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Mi Discord:</strong> discord.gg/QVGPaYc2cf</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Disponible</li>
               </ul>
             </div>
           </div>
 
           <p>
-            Mi enfoque principal se centra en el diseño de logotipos y fotomontajes, áreas donde busco destacar y superar las expectativas de mis clientes.
-            Cuento con habilidades avanzadas en Adobe Photoshop e Illustrator, utilizando estas poderosas herramientas para dar vida a los conceptos visuales.
-            Además poseo habilidades intermedias en Figma, Adobe XD y After Effects, lo que me permite abordar proyector de manera integral. 
+            Mi enfoque principal se centra en el diseño de logotipos y banners, entre otros muchos diseños que se me puede pedir
             Me caracterizo por trabajar con un cronograma organizado, lo que me permite realizar tareas de forma eficiente y cumplir con las fechas establecidas.
             Creo en la importacia de la planificación para garantizar resultados de alta calidad.
           </p>
@@ -121,68 +119,6 @@
 
     <!-- ======= Counts ======= -->
    
-
-    <!-- ======= Skills  ======= -->
-
-
-    <div class="skills container">
-
-      <div class="section-title">
-        <h2>Herramientas</h2>
-      </div>
-
-      <div class="row skills-content">
-
-        <div class="col-lg-6">
-
-          <div class="progress">
-            <span class="skill">After effects <i class="val">80%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">Illustrator <i class="val">90%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">LightRoom <i class="val">75%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-        <div class="col-lg-6">
-
-          <div class="progress">
-            <span class="skill">Photoshop <i class="val">100%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
-
-
-        </div>
-
-      </div>
-
-    </div>
-
-
-
-
-
   </section><!-- End About Section -->
 
 
