--- a/index.html
+++ b/index.html
@@ -187,48 +187,6 @@
 
       <div class="row portfolio-container">
         <!-- ======= Twitch Filter ========== -->
-        <div class="col-lg-4 col-md-6 portfolio-item filter-fotomontajes">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Pagina/Fotomontajes/Mesa de trabajo 1.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Mesa de trabajo 1 </h4>
-              <p></p>
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/Pagina/Fotomontajes/Mesa de trabajo 1.jpg" data-gall="portfolioGallery"
-                  class="venobox" title="Render Pack"><i class="bx bx-plus"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 portfolio-item filter-fotomontajes">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Pagina/Fotomontajes/ROCKET-FOTOMONTAJE.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Rocket League</h4>
-              <p></p>
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/Pagina/Fotomontajes/ROCKET-FOTOMONTAJE.jpg" data-gall="portfolioGallery"
-                  class="venobox" title="Ya comenzamos"><i class="bx bx-plus"></i></a>
-
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-fotomontajes">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Pagina/Fotomontajes/Samurai Final.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Samurai</h4>
-              <p></p>
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/Pagina/Fotomontajes/Samurai Final.jpg" data-gall="portfolioGallery"
-                  class="venobox" title="Off stream"><i class="bx bx-plus"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
         <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Pagina/Logos/Lezar2-08.png" class="img-fluid" alt="">
@@ -237,6 +195,20 @@
               <p></p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/Pagina/Logos/Lezar2-08.png" data-gall="portfolioGallery" class="venobox"
+                  title="Ovelay"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Pagina/Logos/pereira.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Pepe</h4>
+              <p></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Pagina/Logos/pereira.jpg" data-gall="portfolioGallery" class="venobox"
                   title="Ovelay"><i class="bx bx-plus"></i></a>
               </div>
             </div>
