--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <header id="header" class="header-tops">
     <div class="container">
 
-      <h1><a href="index.html">Heiron</a></h1>
+      <h1><a href="index.html">Heiron World</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>Bienvenido a mi portafolio de <span>Diseño</span></h2>
@@ -76,7 +76,7 @@
 
       <div class="section-title">
         <h2>Sobre Mi</h2>
-        <p>Más obre mi</p>
+        <p>Más sobre mi</p>
       </div>
 
       <div class="row">
