--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@
             <i class="bx bx-share-alt"></i>
             <h3>Redes sociales</h3>
             <div class="social-links">
-              <a href="https://twitter.com/TiKeyDesign" class="twitter"><i class="icofont-twitter"></i></a>
+              <a href="https://twitter.com/aaroonmk" class="twitter"><i class="icofont-twitter"></i></a>
 
-              <a href="https://www.instagram.com/tikeydesign/" class="instagram"><i class="icofont-instagram"></i></a>
+              <a href="https://www.instagram.com/aaroonmk/" class="instagram"><i class="icofont-instagram"></i></a>
 
 
             </div>
